src/objects/c2g__AllocationFilter__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpallocationfilter</customHelpPage>
    <description>Stores the queries for selecting and filtering allocation data for the allocation template.</description>
    <fields>
        <fullName>c2g__AllocationFilterStructure__c</fullName>
        <label>Allocation Filter Structure</label>
        <referenceTo>c2g__AllocationFilterStructure__c</referenceTo>
        <relationshipName>FilterValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipName>Filter_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipName>Filter_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipName>Filter_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__FilterCriteria__c</fullName>
        <label>Filter Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Multiselect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>From</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>Filter_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Allocation Filter</label>
    <nameField>
        <displayFormat>AF{000000}</displayFormat>
        <label>Allocation Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>